// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginPage component > Snapshots > should match snapshot for default state 1`] = `
<div
  class="min-h-screen bg-gray-50 flex flex-col items-center justify-center p-4"
>
  <div
    class="max-w-md w-full bg-white rounded-2xl shadow-xl p-8 text-center space-y-6"
  >
    <div
      class="w-16 h-16 bg-blue-100 text-blue-600 rounded-full flex items-center justify-center mx-auto mb-4"
    >
      <svg
        class="w-8 h-8"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
        />
        <polyline
          points="10 17 15 12 10 7"
        />
        <line
          x1="15"
          x2="3"
          y1="12"
          y2="12"
        />
      </svg>
    </div>
    <h1
      class="text-2xl font-bold text-gray-900"
    >
      Connect Account
    </h1>
    <p
      class="text-gray-500"
    >
      Please log in to your 
      Hinatazaka46
       Message account. A browser window will open for you to enter your credentials.
    </p>
    <button
      class="w-full py-3 px-4 rounded-xl font-semibold text-white shadow-lg transition-all transform hover:scale-[1.02] bg-gradient-to-r from-blue-500 to-indigo-600 hover:shadow-xl"
    >
      Launch Browser Login
    </button>
    <div
      class="text-xs text-gray-400 pt-4"
    >
      Your credentials are saved locally on your device.
    </div>
  </div>
</div>
`;

exports[`LoginPage component > Snapshots > should match snapshot with error state 1`] = `
<div
  class="min-h-screen bg-gray-50 flex flex-col items-center justify-center p-4"
>
  <div
    class="max-w-md w-full bg-white rounded-2xl shadow-xl p-8 text-center space-y-6"
  >
    <div
      class="w-16 h-16 bg-blue-100 text-blue-600 rounded-full flex items-center justify-center mx-auto mb-4"
    >
      <svg
        class="w-8 h-8"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
        />
        <polyline
          points="10 17 15 12 10 7"
        />
        <line
          x1="15"
          x2="3"
          y1="12"
          y2="12"
        />
      </svg>
    </div>
    <h1
      class="text-2xl font-bold text-gray-900"
    >
      Connect Account
    </h1>
    <p
      class="text-gray-500"
    >
      Please log in to your 
      Hinatazaka46
       Message account. A browser window will open for you to enter your credentials.
    </p>
    <div
      class="bg-red-50 text-red-600 p-3 rounded-lg text-sm"
    >
      Session expired
    </div>
    <button
      class="w-full py-3 px-4 rounded-xl font-semibold text-white shadow-lg transition-all transform hover:scale-[1.02] bg-gradient-to-r from-blue-500 to-indigo-600 hover:shadow-xl"
    >
      Launch Browser Login
    </button>
    <div
      class="text-xs text-gray-400 pt-4"
    >
      Your credentials are saved locally on your device.
    </div>
  </div>
</div>
`;
